Version 2.1.5
----------------------------------
Core - General
  - Fix fatal error if an extcss stylesheet was placed in the admin theme
  - Another minor fix to clearing cached files.
  - Fixes problems where all files (including dot files) had to be writable before creating a module XML file.
  - Fixes minor notice in user operations.  
  - Fixes for namespaced modules.
  - Fixes an issue in CmsLayoutTemplate when creating a template from a type.
  - Fixes an issue where a 404 handler error page would not be rendered correctly if for some reason the route did not specify a page id to load.
  - More fixes to cms_url class.
  - Improve the way page aliases are munged when they are supplied.
  - Improve the error generated when a page alias cannot be generated
  - Minor fixes to the form_start plugin.
  - Minor fixes to generation of moduleinfo.ini

Content Manager
  - Improve error handling in edit content.

Design Manager
  - Fix problem with resetting a template back to factory defaults, or creating a new template from factory defaults.

Module Manager
  - Improve the way modules with dependencies are installed and upgraded. (got rid of the queue stuff).

Version 2.1.4 - Freetown
----------------------------------
Core - General
  - Fix to the clear_cached_file() method which should fix problems with module installation.
  - Minor tweak to distributed sample htaccess.txt file.

Phar Installer
  - Fixes issues with respect to hanging on step 7 when suhosin PHP addon was installed.
  - Minor PHP7 Fixes.

Module Manager
  - Fixes problems where all files (including dot files) had to be writable before creating a module XML file.

Version 2.1.3 - Black Point
----------------------------------
Core - General
  - Security fix to prevent HTTP_HOST attacks. Many thanks to I-TRACING (www.i-tracing.com) for reporting it!!
  - Remove stub .htaccess files from subdirectories
  - Update the included sample htaccess.txt file for security