@@ -18,7 +18,7 @@
 	    var self = this;
 	    if( !this.options.url ) throw 'A URL must be specified for the autoRefresh plugin';
 	    var v = this.options.interval;
-	    if( v < 1 || v > 3600 ) throw 'autoRefresh interval must be between 1 and 100';
+	    if( v < 1 || v > 3600 ) throw 'autoRefresh interval must be between 1 and 3600';
 	    $(this.element).on('click',':input',function(){
 		self.start();
 	    });
